2923 [AviSynth Profiles]    ensured that every template has the crucial entries for input, crop and resize. Bug #951
2922 [QAAC]                 fixed not able to encode. Bug #954 (regression of 2914)
2921 [OneClick]             subsequent jobs in batch mode and the cleanup job will be created in any case
2920 [Video Encoder]        improved job abort behavior
2919 [Main]                 improved error handling when copying the redist files
2918 [Profile Selector]     fixed new profile not available immediately. Bug #953
2917 [L-SMASH Indexer]      always show source and cachefile (if available)
2916 [FFmpeg AAC Encoder]   fixed quality mode using the wrong number format (regression of 2904)
2915 [L-SMASH Indexer]      added support for recent versions
                            enabled VC-1 decoding support
                            enabled custom index file locations
2914 [Audio Encoder]        improved error handling

Changelog 2896 --> 2913

Features/Changes:
[DGIndexNV Indexer]    adjusted AVS script parameters (requires DGIndexNV 2053.163+)
[DGIndexNV Indexer]    mod2 is forced for crop values (was mod4 before)
[FFmpeg AAC Encoder]   added FFmpeg AAC encoder. patch by Yarick Yermak (patch #71)
[FFmpeg AAC Encoder]   unlike the other AAC encoder this one is available without any additional actions
[Main]                 moved the changelog to the tab control
[Main]                 new entries after an update will be highlighted
[Chapter Creator]      added frame + output time code (if different from input)
[Chapter Creator]      improved/changed handling

Enhancements/Fixes:
[Jobs]                 added in the Options window the possibility to enable/disable standby when jobs are running
[OneClick]             fixed an error when switching profile settings. Bug #946
[OneClick]             fixed not applying "automatic deinterlacing" filters. Bug #945 (regression of 2887)